Updating style to re-introduce webkit touch scrolling and prevent y-axis overflow scrolling for mobile

--- a/style_flex.css
+++ b/style_flex.css
@@ -103,6 +103,7 @@
 
 body {
 	margin: 0;
+	overflow-y: hidden;
 }
 
 h1 {
@@ -139,7 +140,8 @@ p {
 	display:flex;
 	flex-wrap: nowrap;
 	overflow-x: auto;
-	/* -webkit-overflow-scrolling: touch; */
+	-webkit-overflow-scrolling: touch;
+	overflow-scrolling: touch;
  &::-webkit-scrollbar {
     display: none;
   }
